--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -44,6 +44,11 @@
  padding: 10px;
 }
 
+.loginButton:disabled{
+ cursor: not-allowed;
+ background-color: rgb(185, 22, 22);
+}
+
 .loginRegisterButton{
  position: absolute;
  top: 60px;
